# discord-scam-shield

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  check-secrets.sh  docker-compose.yml  quick-deploy.sh
src/: main.rs  ocr.rs  scam_detector.rs
